# TideLogs

./: .dockerignore  .env  LICENSE  README.md  The Definitive Performance Test Suite.js  docker-compose.dev.yml  docker-compose.yml  init.sql  test_api.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: main.rs
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: Dashboard.tsx  FilterPanel.tsx  LogTable.tsx  MetricsCards.tsx
frontend/lib/: api.ts  types.ts
frontend/pages/: _document.tsx  index.tsx
